# HighPerfCV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kernel.cu  kernel.cuh  main.cpp
include/: FilterFactory.h  IFilter.h  utils.h
src/: filter_factory.cpp  main.cpp
src/filters/brightness/: brightness_avx.cpp  brightness_avx.h  brightness_base.cpp  brightness_base.h  brightness_cuda.cpp  brightness_cuda.h  brightness_kernel.cu  brightness_kernel.h  brightness_neon.cpp  brightness_neon.h  brightness_omp.cpp  brightness_omp.h
src/filters/gaussian_blur/: gaussian_avx.cpp  gaussian_avx.h  gaussian_base.cpp  gaussian_base.h  gaussian_cuda.cpp  gaussian_cuda.h  gaussian_kernel.cu  gaussian_kernel.h  gaussian_neon.cpp  gaussian_neon.h  gaussian_omp.cpp  gaussian_omp.h
src/filters/grayscale/: grayscale_avx.cpp  grayscale_avx.h  grayscale_base.cpp  grayscale_base.h  grayscale_cuda.cpp  grayscale_cuda.h  grayscale_kernel.cu  grayscale_kernel.h  grayscale_neon.cpp  grayscale_neon.h  grayscale_omp.cpp  grayscale_omp.h
src/filters/median/: median_avx.cpp  median_avx.h  median_base.cpp  median_base.h  median_cuda.cpp  median_cuda.h  median_kernel.cu  median_kernel.h  median_neon.cpp  median_neon.h  median_omp.cpp  median_omp.h
